--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
     "@angular/forms": "~10.1.6",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^0.1.0",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "jspdf": "^2.1.1",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
